fix: fixed reduced motion layout on mobile

--- a/src/components/division/section/Section.module.css
+++ b/src/components/division/section/Section.module.css
@@ -110,7 +110,22 @@
 }
 
 @media screen and (max-width: 768px) {
-    .container {
+    .container:not(:has(img)) {
         flex-direction: column;
+    }
+
+    .container:has(> img) {
+        display: grid !important;
+        grid-template-areas: "stack";
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .container:has(img) > *{
+        grid-area: stack;
+    }
+
+    .container:not(.hero) img {
+        object-fit: contain;
     }
 }
